fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -232,7 +232,7 @@ br { clear:both; }
 .title h1 {
   color: #333;
   font-size: 60px;
-  font-weight: 200;
+  font-weight: 300;
   //font-weight: bold;
   text-align: center;
   border: 0; padding: 0; margin: 0;
